--- a/package.json
+++ b/package.json
@@ -10,8 +10,32 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.0.11",
+    "@react-navigation/drawer": "^7.0.11",
+    "@react-navigation/native": "^7.0.6",
+    "@react-navigation/stack": "^7.0.11",
+    "@reduxjs/toolkit": "^2.3.0",
+    "lottie-react-native": "^7.1.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-btr": "^2.2.1",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.12.5",
+    "react-native-permissions": "^5.2.0",
+    "react-native-reanimated": "^3.16.2",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-step-indicator": "^1.0.3",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
