--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-navigation/bottom-tabs": "^7.0.11",
+    "@react-navigation/bottom-tabs": "^7.0.12",
     "@react-navigation/drawer": "^7.0.11",
     "@react-navigation/native": "^7.0.6",
     "@react-navigation/stack": "^7.0.11",
@@ -24,6 +24,7 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-btr": "^2.2.1",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
@@ -33,6 +34,7 @@
     "react-native-screens": "^4.3.0",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-step-indicator": "^1.0.3",
+    "react-native-svg": "^15.9.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
