--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -110,8 +110,20 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation 'com.android.support:multidex:1.0.3'
 
     implementation project(':react-native-vector-icons')
+
+       // For animated GIF support
+    implementation 'com.facebook.fresco:fresco:2.0.0'
+    implementation 'com.facebook.fresco:animated-gif:2.6.0'
+    // implementation "com.facebook.fresco:animated-gif:3.1.0"
+    implementation 'com.facebook.fresco:animated-base-support:0.11.0'  
+    implementation 'com.facebook.fresco:animated-webp:2.5.0'
+    implementation  'com.facebook.fresco:webpsupport:2.5.0'
+
+    implementation "com.facebook.react:react-native:+"
+    implementation 'com.google.android.material:material:1.11.0'
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
