--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
@@ -25,6 +26,7 @@
     "react-native": "0.76.3",
     "react-native-btr": "^2.2.1",
     "react-native-elements": "^3.4.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
@@ -36,6 +38,7 @@
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.9.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.8.2",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
